# discord-bot-base

./: .gitignore  README.md  pyproject.toml
src/discord_bot_base/: __init__.py  bot.py  helpcmd.py  logger.py
src/discord_bot_base/cli/: structurize.py
